--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,9 @@ button.default-btn:disabled {
   border-radius: 5px;
   padding: 0px 5px;
 }
+
+#noDataFound {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
